<resources>
    <string name="app_name">Tayckner-Android-Client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tayckner">Tayckner</string>
    <string name="register">REGISTER</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="e_mail">e-mail</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="tag">TAYCKNER</string>
    <string name="habit_tracker">Habit-Tracker</string>
    <string name="my_habits">My habits</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="my_categories">My Categories</string>
</resources>