<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".common.RegisterFragment">


    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tayckner"
        android:textColor="@color/primary"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <View
        android:id="@+id/view_background"
        android:layout_width="211dp"
        android:layout_height="455dp"
        android:background="@drawable/background_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login_top_selector"
        android:text="@string/login"
        android:textColor="@color/OnPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/view_background"
        app:layout_constraintEnd_toEndOf="@+id/view_background"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/view_background"
        app:layout_constraintTop_toTopOf="@+id/view_background"
        app:layout_constraintVertical_bias="0.046"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondaryAccent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:paddingStart="6dp"
                android:paddingEnd="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondaryAccent"
                    android:drawableStart="@drawable/ic_username"
                    android:drawablePadding="12dp"
                    android:hint="@string/username"
                    android:textColor="@color/primaryAccent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:paddingStart="6dp"
                android:paddingEnd="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondaryAccent"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="12dp"
                    android:hint="@string/e_mail"
                    android:textColor="@color/primaryAccent" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInput_firstname"
                        android:layout_width="159dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/secondaryAccent"
                        android:hint="@string/firstname" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInput_lastname"
                        android:layout_width="162dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/secondaryAccent"
                        android:hint="@string/lastname" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="24dp"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/secondaryAccent"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/primaryAccent" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_action"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login_selector"
        android:text="@string/register"
        android:textColor="@color/OnPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>